stable version, trying to add assistant services.